Updated Form CSS

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -59,12 +59,12 @@
                     <select class="custom-select" id="car-model-trims" name="car-model-trims"></select>
                 </div>
             </div>
-            <div class="col col-12 col-md-3">
+            <div class="col col-12 col-md-3 date-available">
                 <label for="car-model-trims">Date Available</label>
                 <input class="custom-select" type="date" id="date-available" name="date-available" required>
             </div>
-            <div class="col col-12">
-                <button class="btn btn-secondary btn-lg btn-block" type="submit">Get Quote!</button>
+            <div class="col col-12 form-button">
+                <button class="btn btn-lg get-quote-button" type="submit">Get Quote!</button>
             </div>
     </div>
     </form>
