--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -92,7 +92,10 @@
           </div>
         </div>
       </div>
-      <button type="submit" class="btn btn-lg btn-block btn-primary">Proceed to Checkout</button>
+      <div class="proceed-to-checkout">
+          <button class="proceed-to-checkout-button" type="submit" class="btn btn-lg">Proceed to Checkout</button>
+      </div>
+
 
       </form>
   </body>
