--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -1,26 +1,12 @@
 <%- include("header") -%>
 <script src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript">
-    $(document).ready(function () {
-        // Stripe
-        const session_id= "<%= session_id %>";
-        console.log(session_id);
-        var stripe = Stripe('pk_test_51H6GmsA0iFQODPbSpKc85KtZjTh2vzZoQmZoN9guzft9ZnXcaYQ4MwBToU6qRruL6lxT0kkmuJ8MYi7OPihjnokl00IMSk0JYf');
-        var checkoutButton = document.getElementById('checkout-button');
+  $(document).ready(function () {
 
-        checkoutButton.addEventListener('click', function () {
-            stripe.redirectToCheckout({
-                sessionId: session_id
-            }).then(function (result) {
-                console.log(result)
-                // If `redirectToCheckout` fails due to a browser or network
-                // error, display the localized error message to your customer
-                // using `result.error.message`.
-            });
-        });
-    });
+  });
 </script>
 <div class=container-fluid>
+
   <body>
     <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
       <h1 class="pricing-header display-4">Pricing Options</h1>
@@ -29,92 +15,87 @@
       <p class=>Choose from our competitively priced transport service options and get your vehicle shipped
         by us.</p>
     </div>
-
+    <form action="/summary" method="POST" id="theForm">
     <div class="container">
-      <div class="card-deck mb-3 text-center">
+      <div id="openBody" class="card-deck mb-3 text-center">
         <div class="card mb-4 shadow-sm">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Open Carrier</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$<%= openFlexible %><small class="text-muted"></small></h1>
+            <h1 class="card-title pricing-card-title">$<%= openstandard %><small class="text-muted"></small></h1>
             <ul class="list mt-3 mb-4">
               <li>Pick-up and delivery is based on shipping availability.</li>
               <li>Choose this option if your vehicle shipment is not time sensitive.</li>
             </ul>
+            <button type="button" class="btn btn-secondary btn-lg btn-block" id="choose-open-button" data-toggle="collapse"
+              data-target="#opencollapse" aria-expanded="false" aria-controls="opencollapse">
+              Choose
+            </button>
           </div>
-        </div>
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Open Carrier</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$<%= openStandard %><small class="text-muted"></small></h1>
-            <ul class="list mt-3 mb-4">
-              <li>Pick-up and delivery is based on shipping availability.</li>
-              <li>Choose this option if your vehicle shipment is not time sensitive.</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Open Carrier</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$<%= openExpedited %><small class="text-muted"></small></h1>
-            <ul class="list mt-3 mb-4">
-              <li>Pick-up and delivery is based on shipping availability.</li>
-              <li>Choose this option if your vehicle shipment is not time sensitive.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="card-deck mb-3 text-center">
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Enclosed Carrier</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$<%= enclosedFlexible %><small class="text-muted"></small></h1>
-            <ul class="list mt-3 mb-4">
-              <li>Pick-up date is within a 2-3 days.</li>
-              <li>Shipping time is between 4-5 days.</li>
-              <li>Choose this option to schedule a time for a pick-up and delivery.</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Enclosed Carrier</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$<%= enclosedStandard %><small class="text-muted"></small></h1>
-            <ul class="list mt-3 mb-4">
-              <li>Pick-up date is within a 2-3 days.</li>
-              <li>Shipping time is between 4-5 days.</li>
-              <li>Choose this option to schedule a time for a pick-up and delivery.</li>
-            </ul>
-          </div>
-        </div>
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Enclosed Carrier</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$<%= enclosedExpedited %><small class="text-muted"></small></h1>
-            <ul class="list mt-3 mb-4">
-              <li>Pick-up date is within a 2-3 days.</li>
-              <li>Shipping time is between 4-5 days.</li>
-              <li>Choose this option to schedule a time for a pick-up and delivery.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="proceed-to-checkout">
+          <div class="collapse" id="opencollapse">
+            <div class="card-body">
+              <input type="radio" id="openstandard" name="selection" value=<%= openstandard %>>
+              <label for="openstandard">Standard $<%= openstandard %></label>
+              <label >Deliver By: <%= standardDeliverBy %></label>
+              <br />
 
-      <button class="btn btn-secondary btn-lg btn-block" class="proceed-to-checkout-button btn btn-lg" id="checkout-button">
-        Proceed to Checkout
-      </button>
+              <input type="radio" id="openpremium" name="selection" value=<%= openpremium %>>
+              <label for="openpremium">Premium $<%= openpremium %></label>
+              <label >Deliver By: <%= premiumDeliverBy %></label>
+              <br />
+
+              <input type="radio" id="openexpress" name="selection" value=<%= openexpress %>>
+              <label for="openexpress">Express $<%= openexpress %></label>
+              <label >Deliver By: <%= expressDeliverBy %></label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="enclosedBody" class="card-deck mb-3 text-center">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Enclosed Carrier</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$<%= enclosedstandard %><small class="text-muted"></small></h1>
+            <ul class="list mt-3 mb-4">
+              <li>Pick-up date is within a 2-3 days.</li>
+              <li>Shipping time is between 4-5 days.</li>
+              <li>Choose this option to schedule a time for a pick-up and delivery.</li>
+            </ul>
+            <button type="button" class="btn btn-secondary btn-lg btn-block" id="choose-enclosed-button" data-toggle="collapse"
+              data-target="#enclosedcollapse" aria-expanded="false" aria-controls="enclosedcollapse">
+              Choose
+            </button>
+          </div>
+          <div class="collapse" id="enclosedcollapse">
+            <div class="card-body">
+              <input type="radio" id="enclosedstandard" name="selection" value=<%= enclosedstandard %>>
+              <label for="enclosedstandard">Standard $<%= enclosedstandard %></label>
+              <label >Deliver By: <%= standardDeliverBy %></label>
+              <br />
+
+              <input type="radio" id="enclosedpremium" name="selection" value=<%= enclosedpremium %>>
+              <label for="enclosedpremium">Premium $<%= enclosedpremium %></label>
+              <label >Deliver By: <%= premiumDeliverBy %></label>
+              <br />
+
+              <input type="radio" id="enclosedexpress" name="selection" value=<%= enclosedexpress %>>
+              <label for="enclosedexpress">Express $<%= enclosedexpress %></label>
+              <label >Deliver By: <%= expressDeliverBy %></label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="proceed-to-summary">
+        <button class="btn btn-primary btn-lg btn-block" type="submit" class="proceed-to-summary-button btn btn-lg"
+          id="summary-button">
+          Proceed to Summary
+        </button>
+      </div>
+    </form>
+
   </body>
 </div>
 <%- include("footer") -%>
