--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -3,11 +3,20 @@
 <script type="text/javascript">
   $(document).ready(function () {
   });
+  $(function () {
+    $('[data-toggle="popover"]').popover()
+  });
 </script>
 <div class="container-fluid">
   <body>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Pricing Options</h1>
+        <p class="lead">Choose from one of the following pricing options below.</p>
+      </div>
+    </div>
     <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="pricing-header display-4">Pricing Options</h1>
+        <!-- <h1 class="pricing-header display-4">Pricing Options</h1> -->
     <div class="card order-summary">
       <div class="card-body"> 
         <h2 class="card-title">Order Summary</h2>
@@ -34,10 +43,36 @@
               <li>Pick-up and delivery is based on shipping availability.</li>
               <li>Choose this option if your vehicle shipment is not time sensitive.</li>
             </ul>
-            <button type="button" class="btn btn-secondary btn-lg btn-block" id="choose-open-button" data-toggle="collapse"
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#upgradeEnclosed">
+              Continue
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="upgradeEnclosed" tabindex="-1" aria-labelledby="upgradeEnclosedLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="upgradeEnclosedLabel" style="font-size: 35px;">Upgrade to Enclosed</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div style="font-size: 25px;" class="modal-body">
+                    You can upgrade to an <strong style="color: #00538b;">'Enclosed Trailer'</strong> for an additional
+                    <br>
+                    <strong style="font-size: 50px; color: #00538b;">$<%= upgradeToEnclosed %></strong>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Contiune with Open</button>
+                    <button type="button" class="btn btn-success">Upgrade to Enclosed</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- <button type="button" class="btn btn-secondary btn-lg" id="choose-open-button" data-toggle="collapse"
               data-target="#opencollapse" aria-expanded="false" aria-controls="opencollapse">
               Choose
-            </button>
+            </button> -->
           </div>
           <div class="collapse" id="opencollapse">
             <div class="card-body">
@@ -58,7 +93,8 @@
           </div>
         </div>
       </div>
-      <div id="enclosedBody" class="card-deck mb-3 text-center">
+      <!-- Hidden for now -->
+      <div style="visibility: hidden;" id="enclosedBody" class="card-deck mb-3 text-center">
         <div class="card mb-4 shadow-sm">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Enclosed Carrier</h4>
