--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -48,7 +48,7 @@
               Continue
             </button>
             <!-- Modal -->
-            <div class="modal fade" id="upgradeEnclosed" tabindex="-1" aria-labelledby="upgradeEnclosedLabel" aria-hidden="true">
+            <div class="modal fade" data-backdrop="static" id="upgradeEnclosed" tabindex="-1" aria-labelledby="upgradeEnclosedLabel" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div class="proceed-to-summary">
-        <button class="btn btn-primary btn-lg btn-block" type="submit" class="proceed-to-summary-button btn btn-lg"
+        <button class="btn btn-primary btn-lg" type="submit" class="proceed-to-summary-button btn btn-lg"
           id="summary-button">
           Proceed to Summary
         </button>
