--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -38,12 +38,10 @@
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$<%= openstandard %><small class="text-muted"></small></h1>
               <!-- Question Mark Icon -->
-              <svg style="float: right; margin-right: 2rem;" width=" 2em" height="2em" viewBox="0 0 16 16"
-                class="bi bi-question-circle" fill="#00538b" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                <path
-                  d="M5.25 6.033h1.32c0-.781.458-1.384 1.36-1.384.685 0 1.313.343 1.313 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.007.463h1.307v-.355c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.326 0-2.786.647-2.754 2.533zm1.562 5.516c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
-              </svg>
+              <button type="button" style="background-color: transparent; border: none;">
+                <i class="fas fa-question fa-3x"
+                  style="float: right; margin-right: 1rem; color: #00538b; text-align: center;"></i>
+              </button>
               <ul class="list mt-3 mb-4" style="list-style: none;">
                 <li>Pick-up and delivery is based on shipping availability.</li>
                 <li>Choose this option if your vehicle shipment is not time sensitive.</li>
