Popup for question mark icon

--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -31,21 +31,23 @@
             <div class="card-header">
               <h4 class="my-0 font-weight-normal">Open Carrier</h4>
             </div>
+            <!-- Open Trailer Image -->
             <div class="openTrailerImage">
               <img src="/images/openTrailer.jpeg" alt="Open Car Trailer"
                 style="width: 50%; border:2px solid lightgray;">
             </div>
+            <!-- Question Mark Icon -->
+            <button type="button" class="btn btn-lg btn-info" data-toggle="popover" title="What is an Open Trailer" data-content="An 'Open Trailer' is a trailer that is open and exposed to the elements.  See the image for an example." 
+            style="background-color: transparent; border: none; float: right; margin-right: 2rem; width: 25px;">
+              <i class="fas fa-question fa-2x"
+                style= "color: #00538b;"></i>
+            </button>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$<%= openstandard %><small class="text-muted"></small></h1>
-              <!-- Question Mark Icon -->
-              <button type="button" style="background-color: transparent; border: none;">
-                <i class="fas fa-question fa-3x"
-                  style="float: right; margin-right: 1rem; color: #00538b; text-align: center;"></i>
-              </button>
-              <ul class="list mt-3 mb-4" style="list-style: none;">
+              <!-- <ul class="list mt-3 mb-4" style="list-style: none;">
                 <li>Pick-up and delivery is based on shipping availability.</li>
                 <li>Choose this option if your vehicle shipment is not time sensitive.</li>
-              </ul>
+              </ul> -->
               <!-- Button trigger modal -->
               <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#upgradeEnclosed">
                 Continue
