--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,7 +1,7 @@
 <%- include("header") -%>
 
-<script type="text/javascript" src="http://www.carqueryapi.com/js/jquery.min.js"></script>
-<script type="text/javascript" src="http://www.carqueryapi.com/js/carquery.0.3.4.js"></script>
+<script type="text/javascript" src="https://www.carqueryapi.com/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://www.carqueryapi.com/js/carquery.0.3.4.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
 
