--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -1,4 +1,5 @@
 <%- include("header") -%>
+
 <script src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript">
   $(document).ready(function () {
@@ -25,20 +26,24 @@
   });
 </script>
 <div class="container-fluid">
+
   <body>
     <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
       <h1 class="pricing-header display-4">Checkout Summary</h1>
       <p class=>Your total delivery cost will be
-      <strong>$<%= selectedPrice %></strong>
+        <strong>$<%= selectedPrice %></strong>
+      <p class=>Vehicle <strong><%= vehicle %></strong></p>
+      <p class=>From <strong><%= from %></strong></p>
+      <p class=>To <strong><%= to %></strong></p>
+      <p class=>Service <strong><%= service %></strong></p>
     </div>
-    <div class="proceed-to-checkout">
-      <button
-        class="btn btn-primary btn-lg btn-block"
-        class="proceed-to-checkout-button btn btn-lg"
-        id="checkout-button"
-      >
-        Proceed to Checkout
-      </button>
+    <div class="container">
+      <div class="proceed-to-checkout">
+        <button class="btn btn-primary btn-lg btn-block" class="proceed-to-checkout-button btn btn-lg"
+          id="checkout-button">
+          Book Now
+        </button>
+      </div>
     </div>
   </body>
 </div>
