--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -70,6 +70,11 @@ label {
   box-shadow: 2px 2px lightgray;
 }
 
+.link {
+  background: none;
+  border: none;
+}
+
 .proceed-to-checkout {
   margin: 0;
   text-align: center;
